--- a/hrithik-bio-data.html
+++ b/hrithik-bio-data.html
@@ -183,7 +183,8 @@
         <li><strong>Religion:</strong> Hindu</li>
         <li><strong>Caste:</strong> Agrahari</li>
         <li><strong>Native Place:</strong> Baberu, Banda, Uttar Pradesh</li>
-        <li><strong>Current Company:</strong> JForce Solution, Mumbai</li>
+        <li><strong>Occupation:</strong> Salesforce Developer</li>
+        <li><strong>Current Origination:</strong> JForce Solution, Mumbai</li>
         <li><strong>Education:</strong> B.Sc. in Information Technology</li>
       </ul>
     </div>
